# voice-agent

./: .env.example  .gitignore  .gitmodules  Dockerfile  MERGE_PLAN.md  PRODUCT.md  PRODUCT_OVERVIEW.md  RUN.md  docker-compose.yml  main.py  pyproject.toml  worker.py
alembic/: env.py
alembic/versions/: 08fc8d728449_initial_schema.py  a1b2c3d4e5f6_add_rag_observability_to_agent_config.py  b2c3d4e5f6a7_add_rag_kb_id.py
src/voiceagent/: config.py  integrations.py
src/voiceagent/agent/: prompts.py  runner.py  tools.py
src/voiceagent/api/: agents.py  auth.py  automations.py  broadcasts.py  calls.py  contacts.py  conversations.py  dashboard.py  flows.py  knowledge.py  messages.py  pipelines.py  voice_settings.py  webhooks.py  whatsapp.py
src/voiceagent/db/: models.py  session.py
src/voiceagent/observability/: client.py
src/voiceagent/pipeline/: bot.py  bot_livekit.py
src/voiceagent/rag/: client.py
src/voiceagent/telephony/: inbound_provisioner.py  livekit_sip.py  provisioner.py
src/voiceagent/whatsapp/: encryption.py  meta_api.py  phone_utils.py  webhook_handler.py
src/voicerag/: config.py
src/voicerag/api/: api_keys.py  auth.py  documents.py  knowledge_bases.py  query.py
src/voicerag/core/: api_key.py  errors.py  redis_client.py  security.py
src/voicerag/db/: models.py  session.py
src/voicerag/embedding/: embedder.py
src/voicerag/ingestion/: chunker.py  loaders.py  pipeline.py
src/voicerag/retrieval/: retriever.py
src/voicerag/schemas/: api_key.py  auth.py  document.py  knowledge_base.py  query.py
src/voicerag/vector/: qdrant_store.py
src/voxscope/: __init__.py  config.py  runtime.py
src/voxscope/aggregation/: percentiles.py
src/voxscope/api/: auth.py  ingest.py  metrics.py  projects.py  traces.py
src/voxscope/core/: api_key.py  security.py
src/voxscope/db/: models.py  session.py
src/voxscope/ingestion/: sampling.py  writer.py
src/voxscope/schemas/: ingest.py  metrics.py  span.py  trace.py
web/: agents.html  analytics.html  calls.html  index.html
