[project]
name = "platform"
version = "0.1.0"
description = "WhatsApp + Voice AI CRM — unified multi-channel sales platform"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[deepgram,cartesia,livekit,silero,groq]>=1.1.0",
    "livekit>=0.17.0",
    "livekit-api>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.0.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "livekit-agents>=1.5.14",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Realtime (SSE)
    "sse-starlette>=2.1.0",
    # Encryption (AES-256-GCM for WhatsApp token storage)
    "cryptography>=42.0.0",
    # DB migrations
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.29",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceagent", "src/crm"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.uv.sources]
